Closed Bug 32904 Opened 26 years ago Closed 26 years ago

Asserts at startup in nsScriptSecurityManager.cpp

Categories

(Core :: JavaScript Engine, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: akkzilla, Assigned: norrisboyd)

References

Details

(Whiteboard: fix in hand)

Since last night, I get two asserts every time I start up: ###!!! ASSERTION: DOM property name invalid or not found: 'PR_FALSE', file /builds/fri/mozilla/caps/src/nsScriptSecurityManager.cpp, line 1491 ###!!! Break: at file /builds/fri/mozilla/caps/src/nsScriptSecurityManager.cpp, line 1491 ###!!! ASSERTION: DOM property name invalid or not found: 'PR_FALSE', file /builds/fri/mozilla/caps/src/nsScriptSecurityManager.cpp, line 1491 ###!!! Break: at file /builds/fri/mozilla/caps/src/nsScriptSecurityManager.cpp, line 1491 Guessing norris because his checkin mentioned nsScriptSecurityManager.
Recent checkins to nsDOMPropEnums.h have gotten the list out of sorted order, confounding the binary search lookup algorithm. I have changes that sort these properly and that provide extra checking in the generation script and on startup.
Status: NEW → ASSIGNED
Whiteboard: fix in hand
*** Bug 33042 has been marked as a duplicate of this bug. ***
Target Milestone: --- → M15
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Thanks! Marking verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.