Fix bug 32904 Asserts at startup in nsScriptSecurityManager.cpp r=mstoltz